SIA sync dummy
